hphp/test/zend/bad/tests-classes/static_properties_003_error2.php
<?php
class C {
    protected static $y = 'C::$y';
}
$c = new C;

echo "\n--> Access non-visible static prop like instance prop:\n";
echo $c->y;
?>
==Done==